--- a/weread-enhancer/rules/font-songti.css
+++ b/weread-enhancer/rules/font-songti.css
@@ -26,6 +26,7 @@
   font-style: normal;
 }
 
-* {
-  font-family: "HYXinRenWenSong", "FZNewShuSong-Z10", songti, serif !important;
+.readerChapterContent,
+.readerChapterContent * {
+  font-family: "HYXinRenWenSong", "FZNewShuSong-Z10", songti, serif;
 }
