--- a/weread-enhancer/rules/text-align-start.css
+++ b/weread-enhancer/rules/text-align-start.css
@@ -1,3 +1,6 @@
-* {
-  text-align: start !important;
+.wr_horizontalReader .readerChapterContent,
+.wr_horizontalReader .readerChapterContent *,
+.readerChapterContent,
+.readerChapterContent * {
+  text-align: start;
 }
